R-3.1.2 with updated metaSEM-0.9.1

--- a/manual/metaSEM-package.html
+++ b/manual/metaSEM-package.html
@@ -37,7 +37,7 @@ Version: </td><td align="left"> 0.9-1</td>
 </tr>
 <tr>
  <td align="left">
-Date: </td><td align="left"> 2014-11-28</td>
+Date: </td><td align="left"> 2014-12-22</td>
 </tr>
 <tr>
  <td align="left">
@@ -79,6 +79,8 @@ LazyLoad: </td><td align="left"> yes</td>
 <p>Cheung, M. W.-L. (2014). Modeling dependent effect sizes with three-level meta-analyses: A structural equation modeling approach. <EM>Psychological Methods</EM>, <B>19</B>, 211-229.
 </p>
 <p>Cheung, M. W.-L. (2014). Fixed- and random-effects meta-analytic structural equation modeling: Examples and analyses in R. <EM>Behavior Research Methods</EM>, <B>46</B>, 29-40. 
+</p>
+<p>Cheung, M. W.-L. (2014). metaSEM: An R package for meta-analysis using structural equation modeling. <EM>Frontiers in Psychology</EM>, <B>5</B>, 1521.
 </p>
 <p>Cheung, M. W.-L. (2015). <EM>Meta-Analysis: A Structural Equation Modeling Approach</EM>. Wiley.
 </p>
