--- a/manual/Becker92.html
+++ b/manual/Becker92.html
@@ -194,25 +194,25 @@ summary(random1)
 ## 95% confidence intervals: z statistic approximation
 ## Coefficients:
 ##               Estimate   Std.Error      lbound      ubound z value
-## Intercept1  3.6738e-01  3.9364e-02  2.9022e-01  4.4453e-01  9.3328
+## Intercept1  3.6738e-01  3.9364e-02  2.9023e-01  4.4453e-01  9.3328
 ## Intercept2  3.2299e-01  8.5164e-02  1.5607e-01  4.8991e-01  3.7926
-## Intercept3  1.7591e-01  4.1380e-02  9.4807e-02  2.5701e-01  4.2511
+## Intercept3  1.7591e-01  4.1379e-02  9.4807e-02  2.5701e-01  4.2511
 ## Tau2_1_1    1.0000e-10  4.0975e-03 -8.0309e-03  8.0309e-03  0.0000
-## Tau2_2_2    3.4481e-02  2.9091e-02 -2.2536e-02  9.1497e-02  1.1853
-## Tau2_3_3    1.0000e-10  1.0738e-02 -2.1047e-02  2.1047e-02  0.0000
+## Tau2_2_2    3.4481e-02  2.9090e-02 -2.2535e-02  9.1497e-02  1.1853
+## Tau2_3_3    1.0000e-10  1.0738e-02 -2.1046e-02  2.1046e-02  0.0000
 ##             Pr(&gt;|z|)    
 ## Intercept1 &lt; 2.2e-16 ***
 ## Intercept2 0.0001491 ***
 ## Intercept3 2.127e-05 ***
 ## Tau2_1_1   1.0000000    
-## Tau2_2_2   0.2359050    
+## Tau2_2_2   0.2359002    
 ## Tau2_3_3   1.0000000    
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
 ## 
-## Q statistic on the homogeneity of effect sizes: 48.11426
+## Q statistic on the homogeneity of effect sizes: 48.11439
 ## Degrees of freedom of the Q statistic: 15
-## P value of the Q statistic: 2.43736e-05
+## P value of the Q statistic: 2.437235e-05
 ## 
 ## Heterogeneity indices (based on the estimated Tau2):
 ##                              Estimate
@@ -224,7 +224,7 @@ summary(random1)
 ## Number of observed statistics: 18
 ## Number of estimated parameters: 6
 ## Degrees of freedom: 12
-## -2 log likelihood: -21.40992 
+## -2 log likelihood: -21.40986 
 ## OpenMx status1: 0 (&quot;0&quot; or &quot;1&quot;: The optimization is considered fine.
 ## Other values indicate problems.)
 </code></pre>
@@ -245,9 +245,9 @@ summary(random2)
 ## 95% confidence intervals: z statistic approximation
 ## Coefficients:
 ##                  Estimate Std.Error   lbound   ubound z value  Pr(&gt;|z|)
-## Spatial2Math     0.320476  0.043865 0.234503 0.406449  7.3060 2.751e-13
-## Verbal2Math      0.266619  0.087134 0.095840 0.437398  3.0599  0.002214
-## CorSpatialVerbal 0.175909  0.041380 0.094807 0.257011  4.2511 2.127e-05
+## Spatial2Math     0.320476  0.043864 0.234504 0.406448  7.3061 2.749e-13
+## Verbal2Math      0.266619  0.087133 0.095840 0.437397  3.0599  0.002214
+## CorSpatialVerbal 0.175909  0.041379 0.094807 0.257011  4.2511 2.127e-05
 ##                     
 ## Spatial2Math     ***
 ## Verbal2Math      ** 
@@ -299,9 +299,9 @@ summary(gls1)
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
 ## 
-## Q statistic on the homogeneity of effect sizes: 9.216161
+## Q statistic on the homogeneity of effect sizes: 9.216152
 ## Degrees of freedom of the Q statistic: 9
-## P value of the Q statistic: 0.4175648
+## P value of the Q statistic: 0.4175656
 ## 
 ## Heterogeneity indices (based on the estimated Tau2):
 ##                              Estimate
@@ -313,7 +313,7 @@ summary(gls1)
 ## Number of observed statistics: 12
 ## Number of estimated parameters: 3
 ## Degrees of freedom: 9
-## -2 log likelihood: -25.98567 
+## -2 log likelihood: -25.98568 
 ## OpenMx status1: 0 (&quot;0&quot; or &quot;1&quot;: The optimization is considered fine.
 ## Other values indicate problems.)
 </code></pre>
