Updated to metaSEM 0.9-2

--- a/manual/00Index.html
+++ b/manual/00Index.html
@@ -10,7 +10,7 @@
 <div align="center">
 <a href="http://stat.ethz.ch/R-manual/R-devel/doc/html/packages.html"><img src="http://stat.ethz.ch/R-manual/R-devel/doc/html/left.jpg" alt="[Up]" width="30" height="30" border="0"></a>
 <a href="http://stat.ethz.ch/R-manual/R-devel/doc/html/index.html"><img src="http://stat.ethz.ch/R-manual/R-devel/doc/html/up.jpg" alt="[Top]" width="30" height="30" border="0"></a>
-</div><h2>Documentation for package &lsquo;metaSEM&rsquo; version 0.9-1</h2>
+</div><h2>Documentation for package &lsquo;metaSEM&rsquo; version 0.9-2</h2>
 
 <ul><li><a href="../DESCRIPTION">DESCRIPTION file</a>.</li>
 <li><a href="../doc/index.html">User guides, package vignettes and other documentation.</a></li>
@@ -55,6 +55,8 @@
 <td>Five Published Trails from Berkey et al. (1998)</td></tr>
 <tr><td width="25%"><a href="Bornmann07.html">Bornmann07</a></td>
 <td>A Dataset from Bornmann et al. (2007)</td></tr>
+<tr><td width="25%"><a href="Cheung00.html">Cheung00</a></td>
+<td>Fifty Studies of Correlation Matrices used in Cheung and Chan (2000)</td></tr>
 <tr><td width="25%"><a href="Cheung09.html">Cheung09</a></td>
 <td>A Data Set from TSSEM User's Guide Version 1.11 by Cheung (2009)</td></tr>
 <tr><td width="25%"><a href="coef.html">coef.meta</a></td>
@@ -123,9 +125,9 @@
 <td>Three-Level Univariate Meta-Analysis with Maximum Likelihood Estimation</td></tr>
 <tr><td width="25%"><a href="metaSEM-package.html">metaSEM</a></td>
 <td>Meta-Analysis using Structural Equation Modeling</td></tr>
-<tr><td width="25%"><a href="pattern.na.html">pattern.n</a></td>
+<tr><td width="25%"><a href="pattern.n.html">pattern.n</a></td>
 <td>Display the Accumulative Sample Sizes for the Covariance Matrix</td></tr>
-<tr><td width="25%"><a href="pattern.n.html">pattern.na</a></td>
+<tr><td width="25%"><a href="pattern.na.html">pattern.na</a></td>
 <td>Display the Pattern of Missing Data of a List of Square Matrices</td></tr>
 <tr><td width="25%"><a href="plot.meta.html">plot.meta</a></td>
 <td>Plot method for meta objects</td></tr>
