--- a/manual/00frame_toc.html
+++ b/manual/00frame_toc.html
@@ -95,6 +95,7 @@ dt, p code {
 <li><a href="Becker94.html" target="content">Becker94</a></li>
 <li><a href="Berkey98.html" target="content">Berkey98</a></li>
 <li><a href="Bornmann07.html" target="content">Bornmann07</a></li>
+<li><a href="Cheung00.html" target="content">Cheung00</a></li>
 <li><a href="Cheung09.html" target="content">Cheung09</a></li>
 <li><a href="Cooper03.html" target="content">Cooper03</a></li>
 <li><a href="Diag.html" target="content">Diag</a></li>
@@ -141,7 +142,7 @@ dt, p code {
 <li><a href="wvs94b.html" target="content">wvs94b</a></li>
 </ul>
 
-<p>Generated with <a href="http://yihui.name/knitr">knitr</a>  1.8</p>
+<p>Generated with <a href="http://yihui.name/knitr">knitr</a>  1.9</p>
 
 </body>
 
