--- a/manual/pattern.na.html
+++ b/manual/pattern.na.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>R: Display the Accumulative Sample Sizes for the Covariance...</title>
+<html><head><title>R: Display the Pattern of Missing Data of a List of Square...</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" type="text/css" href="R.css">
 
@@ -9,22 +9,22 @@
 <script>hljs.initHighlightingOnLoad();</script>
 </head><body>
 
-<table width="100%" summary="page for pattern.n {metaSEM}"><tr><td>pattern.n {metaSEM}</td><td align="right">R Documentation</td></tr></table>
+<table width="100%" summary="page for pattern.na {metaSEM}"><tr><td>pattern.na {metaSEM}</td><td align="right">R Documentation</td></tr></table>
 
-<h2>Display the Accumulative Sample Sizes for the Covariance Matrix
+<h2>Display the Pattern of Missing Data of a List of Square Matrices
 </h2>
 
 <h3>Description</h3>
 
-<p>It displays the accumulative sample sizes for the
-covariance matrix.
+<p>It displays the pattern of missing data (or pattern of data
+that are present) of a list of square matrices with the same dimensions.
 </p>
 
 
 <h3>Usage</h3>
 
 <pre>
-pattern.n(x, n)
+pattern.na(x, show.na = TRUE)
 </pre>
 
 
@@ -35,9 +35,10 @@ pattern.n(x, n)
 <td>
 <p>A list of square matrices</p>
 </td></tr>
-<tr valign="top"><td><code>n</code></td>
+<tr valign="top"><td><code>show.na</code></td>
 <td>
-<p>A vector of sample sizes.
+<p>If it is <code>TRUE</code>, it shows the pattern of missing
+data. If it is <code>FALSE</code>, it shows the pattern of data that are present.
 </p>
 </td></tr>
 </table>
@@ -45,7 +46,7 @@ pattern.n(x, n)
 
 <h3>Value</h3>
 
-<p>A square matrix of the accumulative sample sizes of the
+<p>A square matrix of numerical values with the same dimensions of the
 input matrices.
 </p>
 
@@ -59,23 +60,40 @@ input matrices.
 <h3>Examples</h3>
 
 <pre><code class="r">## Show the pattern of missing data
-pattern.n(Hunter83$data, Hunter83$n)
+pattern.na(Hunter83$data, show.na=TRUE)
 </code></pre>
 
 <pre><code>##             Ability Knowledge Work sample Supervisor
-## Ability        3815      3372        3281       3605
-## Knowledge      3372      3532        2998       3322
-## Work sample    3281      2998        3441       3231
-## Supervisor     3605      3322        3231       3765
+## Ability           1         3           3          2
+## Knowledge         3         2           4          3
+## Work sample       3         4           2          3
+## Supervisor        2         3           3          1
 </code></pre>
 
 <pre><code class="r">#             Ability Knowledge Work sample Supervisor
-# Ability        3815      3372        3281       3605
-# Knowledge      3372      3532        2998       3322
-# Work sample    3281      2998        3441       3231
-# Supervisor     3605      3322        3231       3765
+# Ability           1         3           3          2
+# Knowledge         3         2           4          3
+# Work sample       3         4           2          3
+# Supervisor        2         3           3          1
+
+## Show the pattern of data that are present
+pattern.na(Hunter83$data, show.na=FALSE)
+</code></pre>
+
+<pre><code>##             Ability Knowledge Work sample Supervisor
+## Ability          13        11          11         12
+## Knowledge        11        12          10         11
+## Work sample      11        10          12         11
+## Supervisor       12        11          11         13
+</code></pre>
+
+<pre><code class="r">#             Ability Knowledge Work sample Supervisor
+# Ability          13        11          11         12
+# Knowledge        11        12          10         11
+# Work sample      11        10          12         11
+# Supervisor       12        11          11         13
 </code></pre>
 
 
-<hr><div align="center">[Package <em>metaSEM</em> version 0.9-1 <a href="00Index.html">Index</a>]</div>
+<hr><div align="center">[Package <em>metaSEM</em> version 0.9-2 <a href="00Index.html">Index</a>]</div>
 </body></html>
